[project]
name = "continual-go-baselines"
version = "0.1.0"
description = "Baseline implementations for the ContinualGo environment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "continual-go",
    "tyro>=1.0.15",
    "wandb>=0.28.0",
]

[tool.uv.sources]
continual-go = { git = "https://github.com/mikelma/continual-go" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
